--- a/taxonomy/ct-dpl.yaml
+++ b/taxonomy/ct-dpl.yaml
@@ -37,7 +37,7 @@ taxonomy:
     - software-version
     - company-name
     - tax-reference
-    lookup:
+    segment:
       business-type:
         dimension: ct-comp:BusinessTypeDimension
         map:
